[gd_scene load_steps=8 format=3 uid="uid://57lt86osj6em"]

[ext_resource type="PackedScene" uid="uid://borq1hhjucdra" path="res://modeles3d/plancheadecouper.glb" id="1_umcbu"]
[ext_resource type="Script" path="res://plancheadecouper.gd" id="2_xrn47"]
[ext_resource type="Texture2D" uid="uid://dkntanv7dyaq1" path="res://images/textures/boisplain.png" id="3_dwy7u"]
[ext_resource type="AudioStream" uid="uid://bnxoi6jqjteen" path="res://sons/log-split-88986.wav" id="4_wb80b"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oa36b"]
albedo_texture = ExtResource("3_dwy7u")
metallic = 0.8
roughness = 0.75
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_offset = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="BoxShape3D" id="BoxShape3D_uikgv"]
size = Vector3(1.56677, 0.117065, 2.35828)

[sub_resource type="BoxShape3D" id="BoxShape3D_10j4b"]
size = Vector3(1.59668, 0.165466, 2.37341)

[node name="plancheadecouper" groups=["prehensible"] instance=ExtResource("1_umcbu")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)
script = ExtResource("2_xrn47")

[node name="Cube" parent="." index="0"]
material_override = SubResource("StandardMaterial3D_oa36b")

[node name="interaction_area" type="Area3D" parent="." index="1" groups=["prehensible"]]
collision_mask = 0

[node name="interaction_form" type="CollisionShape3D" parent="interaction_area" index="0" groups=["prehensible"]]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -2.52202e-06, -0.000100769, -1.52588e-05)
shape = SubResource("BoxShape3D_uikgv")

[node name="Planche à découper" type="StaticBody3D" parent="." index="2" groups=["prehensible"]]
collision_layer = 8

[node name="body_collision2" type="CollisionShape3D" parent="Planche à découper" index="0"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -0.00151316, 0.000901103, -0.000808716)
shape = SubResource("BoxShape3D_10j4b")

[node name="audio_pick" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource("4_wb80b")
pitch_scale = 0.5

[node name="Timer" type="Timer" parent="." index="4"]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
